style changes + namespace related methods renaming
Signed-off-by: Lukas Kral <lukywill16@gmail.com>